...
            android:layout_height="wrap_content"
            android:text="Number" />
    </RadioGroup>


    <ListView
        android:id="@+id/playersListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/teamImageView"></ListView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cartFab"
...
