...
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/raidersImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/warriorsImageView"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:src="@drawable/raiders" />

    <ImageView
        android:id="@+id/warriorsImageView"
...
