...
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/balanceTextView"
            android:layout_below="@+id/balanceLabel"
            android:layout_centerHorizontal="true"
            tools:text="$9,999.00"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
...
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_payment_black_24dp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="12dp"
        android:id="@+id/newTransactionButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />
</RelativeLayout>

